# Python-6-Web-HomeWork-03

./: .dockerignore  .gitignore  README.md  history.txt  main.py  pyproject.toml
console_bot/: clean.py
